<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".MainActivity">

    <TextView
            app:layout_constraintBottom_toBottomOf="@id/etName"
            app:layout_constraintTop_toTopOf="@id/etName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/etName"
            android:id="@+id/tvNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
    />

    <EditText
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvNameLabel"
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:autofillHints="name"
    />

    <TextView
            app:layout_constraintEnd_toStartOf="@id/etEmailId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/etEmailId"
            app:layout_constraintTop_toTopOf="@id/etEmailId"
            android:id="@+id/tvEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textSize="18sp"/>

    <EditText
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintStart_toEndOf="@id/tvEmailLabel"
            android:id="@+id/etEmailId"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email_id"
            android:autofillHints="emailAddress"
    />

    <Button
            app:layout_constraintTop_toBottomOf="@id/etEmailId"
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:text="@string/add_record"
    />

    <TextView
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/btnAdd"
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/all_the_inserted_records"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
    />

    <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintTop_toBottomOf="@id/tvName"
            android:id="@+id/rvItemsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="visible"
            tools:visibility="visible"
    />

    <TextView
            android:id="@+id/tvNoRecordsAvailable"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAdd"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_records_available"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="visible"
    />

</androidx.constraintlayout.widget.ConstraintLayout>